--- a/b2c98e7e_12eb_45a6_ab75_1d057d3b1c25.html
+++ b/b2c98e7e_12eb_45a6_ab75_1d057d3b1c25.html
@@ -61,7 +61,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="b2c98e7e_12eb_45a6_ab75_1d057d3b1c25.css?402bbf71_be58_4877_8bc1_dde760bd676a"/>
+	<link rel="stylesheet" href="b2c98e7e_12eb_45a6_ab75_1d057d3b1c25.css?4c7b4d4d_9ecc_46a2_9154_92080d258519"/>
 
 	<style>
 
@@ -182,22 +182,21 @@ document.wafxScreenInfos =
 <div class="compVis_8"><div  class='comp_8 wafxText '><div class='textShape_1024' style='height:5px;'></div><h3 class="waStyle-46c785bb-4092-4d97-a4ff-af25c24c5eee"><span class="t4"   >Jake Simon</span></h3>
 <h3 class="waStyle-b6cd58d0-1379-4fdb-98e4-f8b73e927107"><span class="t5"   > Assistant Professor</span></h3>
 <h3 class="waStyle-b6cd58d0-1379-4fdb-98e4-f8b73e927107"><span class="t6"   > Iowa State University</span></h3></div></div>
-<div class="compVis_9"><div  class='comp_9 wafxText '><div class='textShape_1024' style='height:5px;'></div><p style="text-align: justify;">Nesvorny , David, Li, Rixin, Youdin, Andrew N., <span class="t7"  >Simon, Jacob B.</span>, Grundy, William M. “Trans-Neptunian Binary Evidence for Planetesimal Formation by the Streaming Instability”, 2019, Nature Astronomy, Vol. 3, 808-812, <a href="https://www.nature.com/articles/s41550-019-0806-z" target="_blank"  style="text-decoration: underline;">Link</a>&nbsp;</p>
+<div class="compVis_9"><div  class='comp_9 wafxText '><div class='textShape_1024' style='height:5px;'></div><p style="text-align: justify;">Gole, Daniel A., Simon, Jacob B., Li, Rixin, Youdin, Andrew N., Armitage, Philip J. "Turbulence Regulates the Rate of Planetesimal Formation via Gravitational Collapse", submitted to ApJ, <a href="https://arxiv.org/abs/2001.10000" target="_blank"  style="text-decoration: underline;">arXiv Link</a>&nbsp;</p>
+<p style="text-align: justify;"><br />Nesvorny , David, Li, Rixin, Youdin, Andrew N., <span class="t7"  >Simon, Jacob B.</span>, Grundy, William M. “Trans-Neptunian Binary Evidence for Planetesimal Formation by the Streaming Instability”, 2019, Nature Astronomy, Vol. 3, 808-812, <a href="https://www.nature.com/articles/s41550-019-0806-z" target="_blank"  style="text-decoration: underline;">Link</a>&nbsp;</p>
 <p style="text-align: justify;">&nbsp;</p>
-<p style="text-align: justify;">Abod, Charles P., <span class="t8"  >Simon, Jacob B.</span>, Li, Rixin, Armitage, Philip J., Youdin, Andrew N., Kretke, Katherine A. ``The Mass and Size Distribution of Planetesimals Formed by the Streaming Instability. II. The Effect of the Radial Pressure Gradient”, accepted to ApJ,  <a href="https://ui.adsabs.harvard.edu/abs/2018arXiv181010018A/abstract" target="_blank"  style="text-decoration: underline;">Link</a>&nbsp;</p>
+<p style="text-align: justify;"><span class="t8"  >Simon, Jacob B.</span>, Bai, Xue-Ning, Flaherty, Kevin M., Hughes, A. Meredith, ``Origin of Weak Turbulence in the Outer Regions of Protoplanetary Disks”, 2018, ApJ, 865, 10-20, <a href="https://ui.adsabs.harvard.edu/abs/2018ApJ...865...10S/abstract" target="_blank"  style="text-decoration: underline;">Link</a>&nbsp;</p>
 <p style="text-align: justify;">&nbsp;</p>
-<p style="text-align: justify;"><span class="t9"  >Simon, Jacob B.</span>, Bai, Xue-Ning, Flaherty, Kevin M., Hughes, A. Meredith, ``Origin of Weak Turbulence in the Outer Regions of Protoplanetary Disks”, 2018, ApJ, 865, 10-20, <a href="https://ui.adsabs.harvard.edu/abs/2018ApJ...865...10S/abstract" target="_blank"  style="text-decoration: underline;">Link</a>&nbsp;</p>
+<p style="text-align: justify;"><span class="t9"  >Simon, Jacob B.</span> ``The Influence of Magnetic Field Geometry on the Formation of Close-in Exoplanets", 2016, ApJL, 827, L37-L41, <a href="https://ui.adsabs.harvard.edu/abs/2016ApJ...827L..37S/abstract" target="_blank"  style="text-decoration: underline;">Link</a>&nbsp;</p>
 <p style="text-align: justify;">&nbsp;</p>
-<p style="text-align: justify;"><span class="t10"  >Simon, Jacob B.</span> ``The Influence of Magnetic Field Geometry on the Formation of Close-in Exoplanets", 2016, ApJL, 827, L37-L41, <a href="https://ui.adsabs.harvard.edu/abs/2016ApJ...827L..37S/abstract" target="_blank"  style="text-decoration: underline;">Link</a>&nbsp;</p>
+<p style="text-align: justify;"><span class="t10"  >Simon, Jacob B.</span>, Armitage, Philip J., Li, Rixin, Youdin, Andrew N. "The Mass and Size Distribution of Planetesimals Formed by the Streaming Instability. I. The Role of Self-Gravity", 2016, ApJ, 822, 55-72, <a href="https://ui.adsabs.harvard.edu/abs/2016ApJ...822...55S/abstract" target="_blank"  style="text-decoration: underline;">Link</a>&nbsp;</p>
 <p style="text-align: justify;">&nbsp;</p>
-<p style="text-align: justify;"><span class="t11"  >Simon, Jacob B.</span>, Armitage, Philip J., Li, Rixin, Youdin, Andrew N. "The Mass and Size Distribution of Planetesimals Formed by the Streaming Instability. I. The Role of Self-Gravity", 2016, ApJ, 822, 55-72, <a href="https://ui.adsabs.harvard.edu/abs/2016ApJ...822...55S/abstract" target="_blank"  style="text-decoration: underline;">Link</a>&nbsp;</p>
+<p style="text-align: justify;">Flaherty, Kevin M., Hughes, A. Meredith, Rosenfeld, Katherine A., Andrews, Sean M., Chiang, Eugene, <span class="t11"  >Simon, Jacob B.</span>, Kerzner, Skylar, Wilner, David J. “Weak Turbulence in the HD 163296 Protoplanetary Disk Revealed by ALMA CO Observations”, 2015, ApJ, 813, 99-119, <a href="https://ui.adsabs.harvard.edu/abs/2015ApJ...813...99F/abstract" target="_blank"  style="text-decoration: underline;">Link</a>&nbsp;</p>
 <p style="text-align: justify;">&nbsp;</p>
-<p style="text-align: justify;">Flaherty, Kevin M., Hughes, A. Meredith, Rosenfeld, Katherine A., Andrews, Sean M., Chiang, Eugene, <span class="t12"  >Simon, Jacob B.</span>, Kerzner, Skylar, Wilner, David J. “Weak Turbulence in the HD 163296 Protoplanetary Disk Revealed by ALMA CO Observations”, 2015, ApJ, 813, 99-119, <a href="https://ui.adsabs.harvard.edu/abs/2015ApJ...813...99F/abstract" target="_blank"  style="text-decoration: underline;">Link</a>&nbsp;</p>
+<p style="text-align: justify;"><span class="t12"  >Simon, Jacob B.</span>, Lesur, Geoffroy, Kunz, Matthew W., Armitage, Philip J. "Magnetized accretion in protoplanetary discs", 2015, MNRAS, 454, 1117-1131, <a href="https://ui.adsabs.harvard.edu/abs/2015MNRAS.454.1117S/abstract" target="_blank"  style="text-decoration: underline;">Link</a>&nbsp;</p>
 <p style="text-align: justify;">&nbsp;</p>
-<p style="text-align: justify;"><span class="t13"  >Simon, Jacob B.</span>, Lesur, Geoffroy, Kunz, Matthew W., Armitage, Philip J. "Magnetized accretion in protoplanetary discs", 2015, MNRAS, 454, 1117-1131, <a href="https://ui.adsabs.harvard.edu/abs/2015MNRAS.454.1117S/abstract" target="_blank"  style="text-decoration: underline;">Link</a>&nbsp;</p>
-<p style="text-align: justify;">&nbsp;</p>
-<p style="text-align: justify;">Stone, James M., Gardiner, Thomas A., Teuben, Peter, Hawley, John F., <span class="t14"  >Simon, Jacob B.</span>, "Athena: A New Code for Astrophysical MHD", 2008, ApJS, 178, 137-177, <a href="https://ui.adsabs.harvard.edu/abs/2008ApJS..178..137S/abstract" target="_blank"  style="text-decoration: underline;">Link</a>&nbsp;</p></div></div>
-<div class="compVis_10"><div  class='comp_10 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t15"  >Selected Publications</span>&nbsp;</p></div></div>
+<p style="text-align: justify;">Stone, James M., Gardiner, Thomas A., Teuben, Peter, Hawley, John F., <span class="t13"  >Simon, Jacob B.</span>, "Athena: A New Code for Astrophysical MHD", 2008, ApJS, 178, 137-177, <a href="https://ui.adsabs.harvard.edu/abs/2008ApJS..178..137S/abstract" target="_blank"  style="text-decoration: underline;">Link</a>&nbsp;</p></div></div>
+<div class="compVis_10"><div  class='comp_10 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t14"  >Selected Publications</span>&nbsp;</p></div></div>
 <div class="compVis_11"><div class='comp_11'  title=""><div class='wafx-img-picture'></div></div></div>
 <div class="compVis_12"><div class='comp_12'  title=""><div class='wafx-img-picture'></div></div></div>
 <div class="compVis_13"><div class='comp_13'  title=""><div class='wafx-img-picture'></div></div></div>
@@ -206,10 +205,10 @@ document.wafxScreenInfos =
 <div class="compVis_16"><div class='comp_16'  title=""><div class='wafx-img-picture'></div></div></div>
 <div class="compVis_17"><div class='comp_17'  title=""><div class='wafx-img-picture'></div></div></div>
 <div class="compVis_18"><div class='comp_18'  title=""><div class='wafx-img-picture'></div></div></div>
-<div class="compVis_19"><div  class='comp_19 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t16"  >Full Publication List</span>&nbsp;</p></div></div>
+<div class="compVis_19"><div  class='comp_19 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t15"  >Full Publication List</span>&nbsp;</p></div></div>
 <div class="compVis_20"><div class='comp_20'  title=""><a href="http://simon.physics.iastate.edu/PDF/publications.pdf"  ><div class='wafx-img-picture'></div></a></div></div>
-<div class="compVis_21"><div  class='comp_21 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><a href="https://tinyurl.com/y5d9vxut" target="_blank" ><span class="t17"  >Find me on ADS</span></a>&nbsp;</p></div></div>
-<div class="compVis_22"><div  class='comp_22 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t18"  >PhD Thesis</span>&nbsp;</p></div></div>
+<div class="compVis_21"><div  class='comp_21 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><a href="https://tinyurl.com/y5d9vxut" target="_blank" ><span class="t16"  >Find me on ADS</span></a>&nbsp;</p></div></div>
+<div class="compVis_22"><div  class='comp_22 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t17"  >PhD Thesis</span>&nbsp;</p></div></div>
 <div class="compVis_23"><div class='comp_23'  title=""><a href="http://simon.physics.iastate.edu/PDF/Thesis.pdf"  ><div class='wafx-img-picture'></div></a></div></div>
 
 
