--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="index.css?db8d00e6_f1a3_4c40_989c_03dd71292759"/>
+	<link rel="stylesheet" href="index.css?5a93393b_c0b6_4033_8c8c_b69b0fcd6efa"/>
 
 	<style>
 
@@ -194,13 +194,14 @@ document.wafxScreenInfos =
 <div class="compVis_12"><div  class='comp_12 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t8"   >What's New?</span>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p></div></div>
-<div class="compVis_13"><div  class='comp_13 wafxText '><div class='textShape_1024' style='height:5px;'></div><p>-- I welcome a new postdoc to my group, Daniel Carrera</p>
+<div class="compVis_13"><div  class='comp_13 wafxText '><div class='textShape_1024' style='height:5px;'></div><p>--  This Fall, I will be welcoming another new postdoc, Sayantan Auddy, to my group!</p>
+<p>&nbsp;</p>
+<p>--  I welcome a new postdoc to my group, Daniel Carrera</p>
 <p>&nbsp;</p>
 <p>-- My former undergraduate's first author paper has been accepted for publication in the Astrophysical Journal. ArXiv Link: <a href="https://arxiv.org/abs/1810.10018" target="_blank" >https://arxiv.org/abs/1810.10018</a>&nbsp;</p>
 <p>&nbsp;</p>
 <p>-- Recent paper published in Nature Astronomy that shows excellent agreement between theoretical predictions and observations of Kuiper Belt binary properties. Link: <a href="https://www.nature.com/articles/s41550-019-0806-z.epdf?author_access_token=x8xN-u-EoJNG7fBIxyOUTNRgN0jAjWel9jnR3ZoTv0P0yJ7LjCkYYDLljFyR2nBIwOFlbUtM5vb_Szq1tddDdfm4yVTliCiL_q9jRGmXML_LXajnWqnysHVOgLkpOUpTEuT6-aah8-b9V1RYCjA33A%3D%3D" target="_blank" >Nature Astronomy</a>; Link to a related blog article: <a href="https://astronomycommunity.nature.com/channels/1490-behind-the-paper/posts/50393-cold-distant-worlds-and-the-scientific-method?fbclid=IwAR07M7CqmH7bzJMvUjPYQwtYmdQw9jvRtddemBNnVJ8mRwGguHgGbe_GIfo" target="_blank" >Behind the Paper</a>&nbsp;</p>
-<p>&nbsp;</p>
-<p>-- I am hiring a new postdoc:  Click <a href="https://isu.wd1.myworkdayjobs.com/en-US/IowaStateJobs/job/Ames-IA/Postdoctoral-Research-Associate---Physics-and-Astronomy_R768" target="_blank" >here</a> for more details!</p></div></div>
+<p>&nbsp;</p></div></div>
 
 
 						
