--- a/940853ca_e0c3_4d00_bbf4_478dcd9503d5.html
+++ b/940853ca_e0c3_4d00_bbf4_478dcd9503d5.html
@@ -63,7 +63,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="940853ca_e0c3_4d00_bbf4_478dcd9503d5.css?810d7b6a_e6c1_425d_8406_376f687dd1bb_7"/>
+	<link rel="stylesheet" href="940853ca_e0c3_4d00_bbf4_478dcd9503d5.css?37e07b39_e10a_4ea1_a2d5_f32cdb86b63d_7"/>
 
 	<style>
 
@@ -142,31 +142,31 @@ document.wafxScreenInfos =
 <a class="wafx-menu-item " role="menuitem" href="./5fb0f8f4_0c8f_4f88_b587_d4d60922f41b.html"  >2D Streaming Instability</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem"  >3D Streaming Instability</a>
+<a class="wafx-menu-item " role="menuitem" href="./ecb4f2da_4631_405d_a3ed_b6e9716037d0.html"  >3D Streaming Instability</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem"  >Streaming Induced Gravitational Collapse</a>
+<a class="wafx-menu-item " role="menuitem" href="./95c24eda_e362_4553_9b56_01d023c5876d.html"  >Streaming Induced Gravitational Collapse</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem"  >MRI Turbulence</a>
+<a class="wafx-menu-item " role="menuitem" href="./789195bb_a6c6_456c_9f98_64c86ebf0329.html"  >Magnetorotational Instability Turbulence</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem"  >2D Kelvin-Helmholtz Instability</a>
+<a class="wafx-menu-item " role="menuitem" href="./06a20866_add6_408c_91d3_41eaf6db730c.html"  >2D Kelvin-Helmholtz Instability</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem"  >3D Kelvin Helmholtz Instability</a>
+<a class="wafx-menu-item " role="menuitem" href="./6a582815_4a05_43b9_8ed3_1c21d67ca878.html"  >3D Kelvin Helmholtz Instability</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem"  >2D Rayleigh-Taylor Instability</a>
+<a class="wafx-menu-item " role="menuitem" href="./d04b5cfa_0301_4db3_80ee_cf541859ee38.html"  >2D Rayleigh-Taylor Instability</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem"  >3D Rayleigh Taylor Instability</a>
+<a class="wafx-menu-item " role="menuitem" href="./2abe6115_26e3_4a73_a688_09ab4ea3ab71.html"  >3D Rayleigh Taylor Instability</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem"  >Self-Gravitating Disk</a>
+<a class="wafx-menu-item " role="menuitem" href="./83c3dcf5_873b_49da_b1a1_3d951a9fee1d.html"  >Self-Gravitating Disk</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem"  >Bow Shock</a>
+<a class="wafx-menu-item " role="menuitem" href="./66f635d1_84f3_45ba_a3ba_b1876e331122.html"  >Bow Shock</a>
 </li>
 </ul>
 </li>
@@ -191,28 +191,31 @@ document.wafxScreenInfos =
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p></div></div>
-<div class="compVis_11"><div  class='comp_11 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t10"  >Planet Formation (under development; graduate course)</span>&nbsp;</p>
+<div class="compVis_11"><div  class='comp_11 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t10"  >Stars, Galaxies, and the Universe (Astronomy 150)</span>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p></div></div>
 <div class="compVis_12"><div class='comp_12'  title=""><img  class="wafx-img-picture" src="./wafx_res/Images/0-7-689289.gif" alt=""></div></div>
-<div class="compVis_13"><div  class='comp_13 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t11"  >Course goal: Introduce students to the power and potential pitfalls of computation in physics and to always be careful with "black box" codes</span>&nbsp;</p>
+<div class="compVis_13"><div  class='comp_13 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t11"  >Course theme: Introduce students to the power and potential pitfalls of computation in physics and to always be careful with "black box" codes</span>&nbsp;</p>
 <p>&nbsp;</p>
 <p><span class="t12"  >Next semester to teach this course: Spring 2020</span>&nbsp;</p>
 <p><span class="t13"  > </span>&nbsp;</p>
 <p><span class="t14"  >Class materials/references:  Lecture Notes on GitHub, Computational Physics: Problem Solving with Python (Landau et al.)</span>&nbsp;</p></div></div>
 <div class="compVis_14"><div class='comp_14'  title=""><img  class="wafx-img-picture" src="./wafx_res/Images/0-7-689289.gif" alt=""></div></div>
-<div class="compVis_15"><div  class='comp_15 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t15"  >Next semester to teach this course: Fall 2020</span>&nbsp;</p>
-<p><span class="t16"  > </span>&nbsp;</p>
-<p><span class="t17"  >Class materials/references: under development</span>&nbsp;</p></div></div>
+<div class="compVis_15"><div class='comp_15'  title=""><img  class="wafx-img-picture" src="./wafx_res/Images/0-7-689289.gif" alt=""></div></div>
 <div class="compVis_16"><div class='comp_16'  title=""><img  class="wafx-img-picture" src="./wafx_res/Images/0-7-689289.gif" alt=""></div></div>
 <div class="compVis_17"><div class='comp_17'  title=""><img  class="wafx-img-picture" src="./wafx_res/Images/0-7-689289.gif" alt=""></div></div>
-<div class="compVis_18"><div class='comp_18'  title=""><img  class="wafx-img-picture" src="./wafx_res/Images/0-7-689289.gif" alt=""></div></div>
-<div class="compVis_19"><div  class='comp_19 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t18"  >Philosophy</span>&nbsp;</p>
+<div class="compVis_18"><div  class='comp_18 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t15"  >Philosophy</span>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p></div></div>
-<div class="compVis_20"><div class='comp_20'  title=""><img  class="wafx-img-picture" src="./wafx_res/Images/0-340-planetesimals.jpg" alt=""></div></div>
+<div class="compVis_19"><div class='comp_19'  title=""><img  class="wafx-img-picture" src="./wafx_res/Images/0-340-planetesimals.jpg" alt=""></div></div>
+<div class="compVis_20"><div  class='comp_20 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t16"  >Course theme: A survey of astronomy for the non-scientist, with a focus on the universe beyond our solar system: stars, black holes, galaxies, cosmology, life in the universe. </span>&nbsp;</p>
+<p><span class="t17"  ></span>&nbsp;</p>
+<p><span class="t18"  >Next semester to teach this course: Fall 2020</span>&nbsp;</p>
+<p><span class="t19"  > </span>&nbsp;</p>
+<p><span class="t20"  >Class materials/references: under development</span>&nbsp;</p></div></div>
+<div class="compVis_21"><div class='comp_21'  title=""><img  class="wafx-img-picture" src="./wafx_res/Images/0-7-689289.gif" alt=""></div></div>
 
 
 						
