--- a/b2c98e7e_12eb_45a6_ab75_1d057d3b1c25.html
+++ b/b2c98e7e_12eb_45a6_ab75_1d057d3b1c25.html
@@ -63,7 +63,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="b2c98e7e_12eb_45a6_ab75_1d057d3b1c25.css?128cce11_b642_41ee_a8ba_d79fc9ec94ff_7"/>
+	<link rel="stylesheet" href="b2c98e7e_12eb_45a6_ab75_1d057d3b1c25.css?ab93ed49_7fe1_49c1_a43f_8058ca8ab4eb_7"/>
 
 	<style>
 
@@ -142,31 +142,31 @@ document.wafxScreenInfos =
 <a class="wafx-menu-item " role="menuitem" href="./5fb0f8f4_0c8f_4f88_b587_d4d60922f41b.html"  >2D Streaming Instability</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem"  >3D Streaming Instability</a>
+<a class="wafx-menu-item " role="menuitem" href="./ecb4f2da_4631_405d_a3ed_b6e9716037d0.html"  >3D Streaming Instability</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem"  >Streaming Induced Gravitational Collapse</a>
+<a class="wafx-menu-item " role="menuitem" href="./95c24eda_e362_4553_9b56_01d023c5876d.html"  >Streaming Induced Gravitational Collapse</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem"  >MRI Turbulence</a>
+<a class="wafx-menu-item " role="menuitem" href="./789195bb_a6c6_456c_9f98_64c86ebf0329.html"  >Magnetorotational Instability Turbulence</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem"  >2D Kelvin-Helmholtz Instability</a>
+<a class="wafx-menu-item " role="menuitem" href="./06a20866_add6_408c_91d3_41eaf6db730c.html"  >2D Kelvin-Helmholtz Instability</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem"  >3D Kelvin Helmholtz Instability</a>
+<a class="wafx-menu-item " role="menuitem" href="./6a582815_4a05_43b9_8ed3_1c21d67ca878.html"  >3D Kelvin Helmholtz Instability</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem"  >2D Rayleigh-Taylor Instability</a>
+<a class="wafx-menu-item " role="menuitem" href="./d04b5cfa_0301_4db3_80ee_cf541859ee38.html"  >2D Rayleigh-Taylor Instability</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem"  >3D Rayleigh Taylor Instability</a>
+<a class="wafx-menu-item " role="menuitem" href="./2abe6115_26e3_4a73_a688_09ab4ea3ab71.html"  >3D Rayleigh Taylor Instability</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem"  >Self-Gravitating Disk</a>
+<a class="wafx-menu-item " role="menuitem" href="./83c3dcf5_873b_49da_b1a1_3d951a9fee1d.html"  >Self-Gravitating Disk</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem"  >Bow Shock</a>
+<a class="wafx-menu-item " role="menuitem" href="./66f635d1_84f3_45ba_a3ba_b1876e331122.html"  >Bow Shock</a>
 </li>
 </ul>
 </li>
