--- a/940853ca_e0c3_4d00_bbf4_478dcd9503d5.html
+++ b/940853ca_e0c3_4d00_bbf4_478dcd9503d5.html
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="940853ca_e0c3_4d00_bbf4_478dcd9503d5.css?077cead9_1960_4882_ac7b_e71a827c71b1_7"/>
+	<link rel="stylesheet" href="940853ca_e0c3_4d00_bbf4_478dcd9503d5.css?cedf6980_c5d5_46da_aed6_6076623eb27e_7"/>
 
 	<style>
 
@@ -190,7 +190,7 @@ document.wafxScreenInfos =
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p></div></div>
-<div class="compVis_11"><div  class='comp_11 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t10"  >Stars, Galaxies, and the Universe (Astronomy 150)</span>&nbsp;</p>
+<div class="compVis_11"><div  class='comp_11 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t10"  >Stars, Galaxies, &amp; Cosmology (Astronomy 150)</span>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p></div></div>
