--- a/06a20866_add6_408c_91d3_41eaf6db730c.html
+++ b/06a20866_add6_408c_91d3_41eaf6db730c.html
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="06a20866_add6_408c_91d3_41eaf6db730c.css?4c57a74b_48ec_4cbb_9e66_f484f9ff6547_7"/>
+	<link rel="stylesheet" href="06a20866_add6_408c_91d3_41eaf6db730c.css?b58e2d14_3a83_4cf4_a9a9_5c53bbfc2b3e_7"/>
 
 	<style>
 
@@ -144,10 +144,10 @@ document.wafxScreenInfos =
 <a class="wafx-menu-item " role="menuitem" href="./5fb0f8f4_0c8f_4f88_b587_d4d60922f41b.html"  >2D Streaming Instability</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./ecb4f2da_4631_405d_a3ed_b6e9716037d0.html"  >3D Streaming Instability</a>
+<a class="wafx-menu-item " role="menuitem" href="./ecb4f2da_4631_405d_a3ed_b6e9716037d0.html"  >3D Streaming Instability 1</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./95c24eda_e362_4553_9b56_01d023c5876d.html"  >Streaming Induced Gravitational Collapse</a>
+<a class="wafx-menu-item " role="menuitem" href="./95c24eda_e362_4553_9b56_01d023c5876d.html"  >3D Streaming Instability 2</a>
 </li>
 <li role="presentation" >
 <a class="wafx-menu-item " role="menuitem" href="./789195bb_a6c6_456c_9f98_64c86ebf0329.html"  >Magnetorotational Instability Turbulence</a>
