--- a/2abe6115_26e3_4a73_a688_09ab4ea3ab71.html
+++ b/2abe6115_26e3_4a73_a688_09ab4ea3ab71.html
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="2abe6115_26e3_4a73_a688_09ab4ea3ab71.css?bf3e690a_b3e1_4245_be24_c515e7e352be_7"/>
+	<link rel="stylesheet" href="2abe6115_26e3_4a73_a688_09ab4ea3ab71.css?395f3b6e_d892_4836_a624_7fdfed71d15d_7"/>
 
 	<style>
 
@@ -144,10 +144,10 @@ document.wafxScreenInfos =
 <a class="wafx-menu-item " role="menuitem" href="./5fb0f8f4_0c8f_4f88_b587_d4d60922f41b.html"  >2D Streaming Instability</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./ecb4f2da_4631_405d_a3ed_b6e9716037d0.html"  >3D Streaming Instability</a>
+<a class="wafx-menu-item " role="menuitem" href="./ecb4f2da_4631_405d_a3ed_b6e9716037d0.html"  >3D Streaming Instability 1</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./95c24eda_e362_4553_9b56_01d023c5876d.html"  >Streaming Induced Gravitational Collapse</a>
+<a class="wafx-menu-item " role="menuitem" href="./95c24eda_e362_4553_9b56_01d023c5876d.html"  >3D Streaming Instability 2</a>
 </li>
 <li role="presentation" >
 <a class="wafx-menu-item " role="menuitem" href="./789195bb_a6c6_456c_9f98_64c86ebf0329.html"  >Magnetorotational Instability Turbulence</a>
