--- a/6a582815_4a05_43b9_8ed3_1c21d67ca878.html
+++ b/6a582815_4a05_43b9_8ed3_1c21d67ca878.html
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="6a582815_4a05_43b9_8ed3_1c21d67ca878.css?2f2477b7_6a49_4838_af7b_38d06e18b087_7"/>
+	<link rel="stylesheet" href="6a582815_4a05_43b9_8ed3_1c21d67ca878.css?0b3500a6_a94a_4c9e_b953_f818a7673de9_7"/>
 
 	<style>
 
@@ -144,10 +144,10 @@ document.wafxScreenInfos =
 <a class="wafx-menu-item " role="menuitem" href="./5fb0f8f4_0c8f_4f88_b587_d4d60922f41b.html"  >2D Streaming Instability</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./ecb4f2da_4631_405d_a3ed_b6e9716037d0.html"  >3D Streaming Instability</a>
+<a class="wafx-menu-item " role="menuitem" href="./ecb4f2da_4631_405d_a3ed_b6e9716037d0.html"  >3D Streaming Instability 1</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./95c24eda_e362_4553_9b56_01d023c5876d.html"  >Streaming Induced Gravitational Collapse</a>
+<a class="wafx-menu-item " role="menuitem" href="./95c24eda_e362_4553_9b56_01d023c5876d.html"  >3D Streaming Instability 2</a>
 </li>
 <li role="presentation" >
 <a class="wafx-menu-item " role="menuitem" href="./789195bb_a6c6_456c_9f98_64c86ebf0329.html"  >Magnetorotational Instability Turbulence</a>
@@ -185,8 +185,9 @@ document.wafxScreenInfos =
 <h3 class="waStyle-b6cd58d0-1379-4fdb-98e4-f8b73e927107"><span class="t6"   > Iowa State University</span></h3></div></div>
 <div class="compVis_9"><div  class='comp_9 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t7"  >3D Kelvin-Helmholtz Instability</span>&nbsp;</p>
 <p><span class="t8"  ></span>&nbsp;</p>
-<p style="text-align: justify;"><span class="t9"  >Rendering of the Kelvin-Helmholtz Instability in 3D, part of a project done by my graduate student, Greg Salvesen. The 3D density rendering was created by Sam Skillman. The first movie shows gas density, and the second movie shows magnetic field strength.</span>&nbsp;</p></div></div>
+<p style="text-align: justify;"><span class="t9"  >Rendering of the Kelvin-Helmholtz Instability in 3D, part of a project done by my former graduate student, <a href="http://web.physics.ucsb.edu/~greg/" target="_blank"  style="text-decoration: underline;">Greg Salvesen</a>. The 3D density rendering was created by <a href="https://github.com/samskillman" target="_blank"  style="text-decoration: underline;">Sam Skillman</a>. The first movie shows gas density, and the second movie shows magnetic field strength.</span>&nbsp;</p></div></div>
 <div class="compVis_10"><div  class='comp_10'><video style="width:100%;height:100%" controls="controls">
+<source src="./wafx_res/Files/3D Rendering of KHI.mp4" type=video/mp4>
 </video>
 </div></div>
 
