--- a/83c3dcf5_873b_49da_b1a1_3d951a9fee1d.html
+++ b/83c3dcf5_873b_49da_b1a1_3d951a9fee1d.html
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="83c3dcf5_873b_49da_b1a1_3d951a9fee1d.css?fed0dc90_724d_4544_b37e_a92e179d81a9_7"/>
+	<link rel="stylesheet" href="83c3dcf5_873b_49da_b1a1_3d951a9fee1d.css?a2a2a093_8a9e_4269_9b21_127ad7002f7c_7"/>
 
 	<style>
 
@@ -144,10 +144,10 @@ document.wafxScreenInfos =
 <a class="wafx-menu-item " role="menuitem" href="./5fb0f8f4_0c8f_4f88_b587_d4d60922f41b.html"  >2D Streaming Instability</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./ecb4f2da_4631_405d_a3ed_b6e9716037d0.html"  >3D Streaming Instability</a>
+<a class="wafx-menu-item " role="menuitem" href="./ecb4f2da_4631_405d_a3ed_b6e9716037d0.html"  >3D Streaming Instability 1</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./95c24eda_e362_4553_9b56_01d023c5876d.html"  >Streaming Induced Gravitational Collapse</a>
+<a class="wafx-menu-item " role="menuitem" href="./95c24eda_e362_4553_9b56_01d023c5876d.html"  >3D Streaming Instability 2</a>
 </li>
 <li role="presentation" >
 <a class="wafx-menu-item " role="menuitem" href="./789195bb_a6c6_456c_9f98_64c86ebf0329.html"  >Magnetorotational Instability Turbulence</a>
@@ -183,10 +183,11 @@ document.wafxScreenInfos =
 <div class="compVis_8"><div  class='comp_8 wafxText '><div class='textShape_1024' style='height:5px;'></div><h3 class="waStyle-46c785bb-4092-4d97-a4ff-af25c24c5eee"><span class="t4"   >Jake Simon</span></h3>
 <h3 class="waStyle-b6cd58d0-1379-4fdb-98e4-f8b73e927107"><span class="t5"   > Assistant Professor</span></h3>
 <h3 class="waStyle-b6cd58d0-1379-4fdb-98e4-f8b73e927107"><span class="t6"   > Iowa State University</span></h3></div></div>
-<div class="compVis_9"><div  class='comp_9 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t7"  >2D Streaming Instability</span>&nbsp;</p>
+<div class="compVis_9"><div  class='comp_9 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t7"  >Self-Gravitating Disk</span>&nbsp;</p>
 <p><span class="t8"  ></span>&nbsp;</p>
-<p style="text-align: justify;"><span class="t9"  >Evolution of the streaming instability in a 2D local shearing box (x direction is radial, y direction is vertical) at a resolution of 1024x1024. The movie shows particle density. Because it leads to the clumping of particles, this instability is important in the early stages of planet formation.</span>&nbsp;</p></div></div>
+<p style="text-align: justify;"><span class="t9"  >Evolution of a self-gravitating disk, where the disk mass is 0.25 times the stellar mass. The simulation was done using an SPH code and was carried out by <a href="https://www.st-andrews.ac.uk/~physoc1/insight/episode.php?s=academics&ep=24" target="_blank"  style="text-decoration: underline;">Duncan Forgan</a>.</span>&nbsp;</p></div></div>
 <div class="compVis_10"><div  class='comp_10'><video style="width:100%;height:100%" controls="controls">
+<source src="./wafx_res/Files/Self-gravity - M_disk %3D 0.25 M_star.mp4" type=video/mp4>
 </video>
 </div></div>
 
