--- a/2dkhi.html
+++ b/2dkhi.html
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="06a20866_add6_408c_91d3_41eaf6db730c.css?b58e2d14_3a83_4cf4_a9a9_5c53bbfc2b3e_7"/>
+	<link rel="stylesheet" href="2dkhi.css?bb3246fc_8bcf_419e_baa0_b81f1909fbf4_7"/>
 
 	<style>
 
@@ -123,49 +123,49 @@ document.wafxScreenInfos =
 <a class="wafx-menu-item " role="menuitem" href="./index.html"  >Home</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./6879c75c_711a_48d0_b4b7_c7118d12a47b.html#top"  >Curriculum Vitae</a>
+<a class="wafx-menu-item " role="menuitem" href="./cv.html#top"  >Curriculum Vitae</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./b2c98e7e_12eb_45a6_ab75_1d057d3b1c25.html#top"  >Publications</a>
+<a class="wafx-menu-item " role="menuitem" href="./pub.html#top"  >Publications</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./ab92c95e_4926_48ab_a274_bd8cef2f7a58.html#top"  >Research</a>
+<a class="wafx-menu-item " role="menuitem" href="./research.html#top"  >Research</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./17b21a37_bb6b_4ee9_bbbd_5d018d0c5f43.html"  >Group</a>
+<a class="wafx-menu-item " role="menuitem" href="./group.html"  >Group</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./940853ca_e0c3_4d00_bbf4_478dcd9503d5.html"  >Teaching</a>
+<a class="wafx-menu-item " role="menuitem" href="./teaching.html"  >Teaching</a>
 </li>
 <li role="presentation" >
 <a class="wafx-menu-item wafxMenuPopupItem  wafxLink" role="menuitem" aria-haspopup="true">Movies<span>&nbsp;&#9662;</span></a>
 <ul class="wafx-menunid2 wafx-menu-frame" role="menu" >
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./5fb0f8f4_0c8f_4f88_b587_d4d60922f41b.html"  >2D Streaming Instability</a>
+<a class="wafx-menu-item " role="menuitem" href="./2dsi.html"  >2D Streaming Instability</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./ecb4f2da_4631_405d_a3ed_b6e9716037d0.html"  >3D Streaming Instability 1</a>
+<a class="wafx-menu-item " role="menuitem" href="./3dsi1.html"  >3D Streaming Instability 1</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./95c24eda_e362_4553_9b56_01d023c5876d.html"  >3D Streaming Instability 2</a>
+<a class="wafx-menu-item " role="menuitem" href="./3dsi2.html"  >3D Streaming Instability 2</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./789195bb_a6c6_456c_9f98_64c86ebf0329.html"  >Magnetorotational Instability Turbulence</a>
+<a class="wafx-menu-item " role="menuitem" href="./mriturb.html"  >Magnetorotational Instability Turbulence</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./06a20866_add6_408c_91d3_41eaf6db730c.html"  >2D Kelvin-Helmholtz Instability</a>
+<a class="wafx-menu-item " role="menuitem" href="./2dkhi.html"  >2D Kelvin-Helmholtz Instability</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./d04b5cfa_0301_4db3_80ee_cf541859ee38.html"  >2D Rayleigh-Taylor Instability</a>
+<a class="wafx-menu-item " role="menuitem" href="./2drti.html"  >2D Rayleigh-Taylor Instability</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./2abe6115_26e3_4a73_a688_09ab4ea3ab71.html"  >3D Rayleigh Taylor Instability</a>
+<a class="wafx-menu-item " role="menuitem" href="./3drti.html"  >3D Rayleigh Taylor Instability</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./83c3dcf5_873b_49da_b1a1_3d951a9fee1d.html"  >Self-Gravitating Disk</a>
+<a class="wafx-menu-item " role="menuitem" href="./sgdisk.html"  >Self-Gravitating Disk</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./66f635d1_84f3_45ba_a3ba_b1876e331122.html"  >Bow Shock</a>
+<a class="wafx-menu-item " role="menuitem" href="./bowshock.html"  >Bow Shock</a>
 </li>
 </ul>
 </li>
