--- a/3dkhi.html
+++ b/3dkhi.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
 	<meta charset="utf-8">
-	<title>Jake Simon - Publications</title>
+	<title>3D Kelvin-Helmholtz Instability</title>
         
 	<meta name="description" content=""/>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="b2c98e7e_12eb_45a6_ab75_1d057d3b1c25.css?e7b78a28_96a9_4dec_8c82_442866a649c4_7"/>
+	<link rel="stylesheet" href="3dkhi.css?dff2dbf0_e2d6_4415_a9a9_07ce513972d3_7"/>
 
 	<style>
 
@@ -123,49 +123,49 @@ document.wafxScreenInfos =
 <a class="wafx-menu-item " role="menuitem" href="./index.html"  >Home</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./6879c75c_711a_48d0_b4b7_c7118d12a47b.html#top"  >Curriculum Vitae</a>
+<a class="wafx-menu-item " role="menuitem" href="./cv.html#top"  >Curriculum Vitae</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./b2c98e7e_12eb_45a6_ab75_1d057d3b1c25.html#top"  >Publications</a>
+<a class="wafx-menu-item " role="menuitem" href="./pub.html#top"  >Publications</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./ab92c95e_4926_48ab_a274_bd8cef2f7a58.html#top"  >Research</a>
+<a class="wafx-menu-item " role="menuitem" href="./research.html#top"  >Research</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./17b21a37_bb6b_4ee9_bbbd_5d018d0c5f43.html"  >Group</a>
+<a class="wafx-menu-item " role="menuitem" href="./group.html"  >Group</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./940853ca_e0c3_4d00_bbf4_478dcd9503d5.html"  >Teaching</a>
+<a class="wafx-menu-item " role="menuitem" href="./teaching.html"  >Teaching</a>
 </li>
 <li role="presentation" >
 <a class="wafx-menu-item wafxMenuPopupItem  wafxLink" role="menuitem" aria-haspopup="true">Movies<span>&nbsp;&#9662;</span></a>
 <ul class="wafx-menunid2 wafx-menu-frame" role="menu" >
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./5fb0f8f4_0c8f_4f88_b587_d4d60922f41b.html"  >2D Streaming Instability</a>
+<a class="wafx-menu-item " role="menuitem" href="./2dsi.html"  >2D Streaming Instability</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./ecb4f2da_4631_405d_a3ed_b6e9716037d0.html"  >3D Streaming Instability 1</a>
+<a class="wafx-menu-item " role="menuitem" href="./3dsi1.html"  >3D Streaming Instability 1</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./95c24eda_e362_4553_9b56_01d023c5876d.html"  >3D Streaming Instability 2</a>
+<a class="wafx-menu-item " role="menuitem" href="./3dsi2.html"  >3D Streaming Instability 2</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./789195bb_a6c6_456c_9f98_64c86ebf0329.html"  >Magnetorotational Instability Turbulence</a>
+<a class="wafx-menu-item " role="menuitem" href="./mriturb.html"  >Magnetorotational Instability Turbulence</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./06a20866_add6_408c_91d3_41eaf6db730c.html"  >2D Kelvin-Helmholtz Instability</a>
+<a class="wafx-menu-item " role="menuitem" href="./2dkhi.html"  >2D Kelvin-Helmholtz Instability</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./d04b5cfa_0301_4db3_80ee_cf541859ee38.html"  >2D Rayleigh-Taylor Instability</a>
+<a class="wafx-menu-item " role="menuitem" href="./2drti.html"  >2D Rayleigh-Taylor Instability</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./2abe6115_26e3_4a73_a688_09ab4ea3ab71.html"  >3D Rayleigh Taylor Instability</a>
+<a class="wafx-menu-item " role="menuitem" href="./3drti.html"  >3D Rayleigh Taylor Instability</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./83c3dcf5_873b_49da_b1a1_3d951a9fee1d.html"  >Self-Gravitating Disk</a>
+<a class="wafx-menu-item " role="menuitem" href="./sgdisk.html"  >Self-Gravitating Disk</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./66f635d1_84f3_45ba_a3ba_b1876e331122.html"  >Bow Shock</a>
+<a class="wafx-menu-item " role="menuitem" href="./bowshock.html"  >Bow Shock</a>
 </li>
 </ul>
 </li>
@@ -183,35 +183,13 @@ document.wafxScreenInfos =
 <div class="compVis_8"><div  class='comp_8 wafxText '><div class='textShape_1024' style='height:5px;'></div><h3 class="waStyle-46c785bb-4092-4d97-a4ff-af25c24c5eee"><span class="t4"   >Jake Simon</span></h3>
 <h3 class="waStyle-b6cd58d0-1379-4fdb-98e4-f8b73e927107"><span class="t5"   > Assistant Professor</span></h3>
 <h3 class="waStyle-b6cd58d0-1379-4fdb-98e4-f8b73e927107"><span class="t6"   > Iowa State University</span></h3></div></div>
-<div class="compVis_9"><div  class='comp_9 wafxText '><div class='textShape_1024' style='height:5px;'></div><p style="text-align: justify;">Carrera, Daniel, Simon, Jacob B., Li, Rixin, Kretke, Katherine A., Klahr, Hubert “Protoplanetary Disk Rings as Sites for Planetesimal Formation”, submitted to ApJ, <a href="https://arxiv.org/abs/2008.01727" target="_blank"  style="text-decoration: underline;">arXiv Link</a>&nbsp;</p>
-<p style="text-align: justify;">&nbsp;</p>
-<p style="text-align: justify;">Nesvorny, David, Li, Rixin, Simon, Jacob B., Youdin, Andrew N., Richardson, Derek C., Marschall, Raphael, Grundy, William M. “Binary Planetesimal Formation from Gravitationally Collapsing Pebble Clouds”, submitted to PSJ.</p>
-<p style="text-align: justify;">&nbsp;</p>
-<p style="text-align: justify;">Gole, Daniel A., Simon, Jacob B., Li, Rixin, Youdin, Andrew N., Armitage, Philip J. "Turbulence Regulates the Rate of Planetesimal Formation via Gravitational Collapse", submitted to ApJ, <a href="https://arxiv.org/abs/2001.10000" target="_blank"  style="text-decoration: underline;">arXiv Link</a>&nbsp;</p>
-<p style="text-align: justify;"><br />Nesvorny, David, Li, Rixin, Youdin, Andrew N., <span class="t7"  >Simon, Jacob B.</span>, Grundy, William M. “Trans-Neptunian Binary Evidence for Planetesimal Formation by the Streaming Instability”, 2019, Nature Astronomy, Vol. 3, 808-812, <a href="https://www.nature.com/articles/s41550-019-0806-z" target="_blank"  style="text-decoration: underline;">Link</a>&nbsp;</p>
-<p style="text-align: justify;">&nbsp;</p>
-<p style="text-align: justify;"><span class="t8"  >Simon, Jacob B.</span>, Bai, Xue-Ning, Flaherty, Kevin M., Hughes, A. Meredith, ``Origin of Weak Turbulence in the Outer Regions of Protoplanetary Disks”, 2018, ApJ, 865, 10-20, <a href="https://ui.adsabs.harvard.edu/abs/2018ApJ...865...10S/abstract" target="_blank"  style="text-decoration: underline;">Link</a>&nbsp;</p>
-<p style="text-align: justify;">&nbsp;</p>
-<p style="text-align: justify;">Flaherty, Kevin M., Hughes, A. Meredith, Rosenfeld, Katherine A., Andrews, Sean M., Chiang, Eugene, <span class="t9"  >Simon, Jacob B.</span>, Kerzner, Skylar, Wilner, David J. “Weak Turbulence in the HD 163296 Protoplanetary Disk Revealed by ALMA CO Observations”, 2015, ApJ, 813, 99-119, <a href="https://ui.adsabs.harvard.edu/abs/2015ApJ...813...99F/abstract" target="_blank"  style="text-decoration: underline;">Link</a>&nbsp;</p>
-<p style="text-align: justify;">&nbsp;</p>
-<p style="text-align: justify;"><span class="t10"  >Simon, Jacob B.</span>, Lesur, Geoffroy, Kunz, Matthew W., Armitage, Philip J. "Magnetized accretion in protoplanetary discs", 2015, MNRAS, 454, 1117-1131, <a href="https://ui.adsabs.harvard.edu/abs/2015MNRAS.454.1117S/abstract" target="_blank"  style="text-decoration: underline;">Link</a>&nbsp;</p>
-<p style="text-align: justify;">&nbsp;</p>
-<p style="text-align: justify;">Stone, James M., Gardiner, Thomas A., Teuben, Peter, Hawley, John F., <span class="t11"  >Simon, Jacob B.</span>, "Athena: A New Code for Astrophysical MHD", 2008, ApJS, 178, 137-177, <a href="https://ui.adsabs.harvard.edu/abs/2008ApJS..178..137S/abstract" target="_blank"  style="text-decoration: underline;">Link</a>&nbsp;</p></div></div>
-<div class="compVis_10"><div  class='comp_10 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t12"  >Selected Publications</span>&nbsp;</p></div></div>
-<div class="compVis_11"><div class='comp_11'  title=""><img  class="wafx-img-picture" src="./wafx_res/Images/0-7-689289.gif" alt=""></div></div>
-<div class="compVis_12"><div class='comp_12'  title=""><img  class="wafx-img-picture" src="./wafx_res/Images/0-7-689289.gif" alt=""></div></div>
-<div class="compVis_13"><div class='comp_13'  title=""><img  class="wafx-img-picture" src="./wafx_res/Images/0-7-689289.gif" alt=""></div></div>
-<div class="compVis_14"><div class='comp_14'  title=""><img  class="wafx-img-picture" src="./wafx_res/Images/0-7-689289.gif" alt=""></div></div>
-<div class="compVis_15"><div class='comp_15'  title=""><img  class="wafx-img-picture" src="./wafx_res/Images/0-7-689289.gif" alt=""></div></div>
-<div class="compVis_16"><div class='comp_16'  title=""><img  class="wafx-img-picture" src="./wafx_res/Images/0-7-689289.gif" alt=""></div></div>
-<div class="compVis_17"><div class='comp_17'  title=""><img  class="wafx-img-picture" src="./wafx_res/Images/0-7-689289.gif" alt=""></div></div>
-<div class="compVis_18"><div class='comp_18'  title=""><img  class="wafx-img-picture" src="./wafx_res/Images/0-7-689289.gif" alt=""></div></div>
-<div class="compVis_19"><div  class='comp_19 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t13"  >Full Publication List</span>&nbsp;</p></div></div>
-<div class="compVis_20"><div class='comp_20'  title=""><a href="http://simon.physics.iastate.edu/PDF/publications.pdf"  ><img  class="wafx-img-picture" src="./wafx_res/Images/0-52-833px-PDF_file_icon.svg.png" alt=""></a></div></div>
-<div class="compVis_21"><div  class='comp_21 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><a href="https://tinyurl.com/y5d9vxut" target="_blank" ><span class="t14"  >Find me on ADS </span></a>&nbsp;</p>
-<p><span class="t15"  >(refereed papers only)</span>&nbsp;</p></div></div>
-<div class="compVis_22"><div  class='comp_22 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t16"  >PhD Thesis</span>&nbsp;</p></div></div>
-<div class="compVis_23"><div class='comp_23'  title=""><a href="http://simon.physics.iastate.edu/PDF/Thesis.pdf"  ><img  class="wafx-img-picture" src="./wafx_res/Images/0-72-thesis_guide__557304.png" alt=""></a></div></div>
+<div class="compVis_9"><div  class='comp_9 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t7"  >3D Kelvin-Helmholtz Instability</span>&nbsp;</p>
+<p><span class="t8"  ></span>&nbsp;</p>
+<p style="text-align: justify;"><span class="t9"  >Rendering of the Kelvin-Helmholtz Instability in 3D, part of a project done by my former graduate student, <a href="http://web.physics.ucsb.edu/~greg/" target="_blank"  style="text-decoration: underline;">Greg Salvesen</a>. The 3D density rendering was created by <a href="https://github.com/samskillman" target="_blank"  style="text-decoration: underline;">Sam Skillman</a>. The first movie shows gas density, and the second movie shows magnetic field strength.</span>&nbsp;</p></div></div>
+<div class="compVis_10"><div  class='comp_10'><video style="width:100%;height:100%" controls="controls">
+<source src="./wafx_res/Files/3D Rendering of KHI.mp4" type=video/mp4>
+</video>
+</div></div>
 
 
 
