--- a/teaching.html
+++ b/teaching.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
 	<meta charset="utf-8">
-	<title>Page sans titre</title>
+	<title>Jake Simon - Teaching</title>
         
 	<meta name="description" content=""/>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="66f635d1_84f3_45ba_a3ba_b1876e331122.css?d02a4f1d_1193_45a5_b7b1_a6b1dfe1fc7e_7"/>
+	<link rel="stylesheet" href="teaching.css?d589303a_ab96_4c0e_b3e4_d1f80f023cd5_7"/>
 
 	<style>
 
@@ -123,49 +123,49 @@ document.wafxScreenInfos =
 <a class="wafx-menu-item " role="menuitem" href="./index.html"  >Home</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./6879c75c_711a_48d0_b4b7_c7118d12a47b.html#top"  >Curriculum Vitae</a>
+<a class="wafx-menu-item " role="menuitem" href="./cv.html#top"  >Curriculum Vitae</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./b2c98e7e_12eb_45a6_ab75_1d057d3b1c25.html#top"  >Publications</a>
+<a class="wafx-menu-item " role="menuitem" href="./pub.html#top"  >Publications</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./ab92c95e_4926_48ab_a274_bd8cef2f7a58.html#top"  >Research</a>
+<a class="wafx-menu-item " role="menuitem" href="./research.html#top"  >Research</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./17b21a37_bb6b_4ee9_bbbd_5d018d0c5f43.html"  >Group</a>
+<a class="wafx-menu-item " role="menuitem" href="./group.html"  >Group</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./940853ca_e0c3_4d00_bbf4_478dcd9503d5.html"  >Teaching</a>
+<a class="wafx-menu-item " role="menuitem" href="./teaching.html"  >Teaching</a>
 </li>
 <li role="presentation" >
 <a class="wafx-menu-item wafxMenuPopupItem  wafxLink" role="menuitem" aria-haspopup="true">Movies<span>&nbsp;&#9662;</span></a>
 <ul class="wafx-menunid2 wafx-menu-frame" role="menu" >
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./5fb0f8f4_0c8f_4f88_b587_d4d60922f41b.html"  >2D Streaming Instability</a>
+<a class="wafx-menu-item " role="menuitem" href="./2dsi.html"  >2D Streaming Instability</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./ecb4f2da_4631_405d_a3ed_b6e9716037d0.html"  >3D Streaming Instability 1</a>
+<a class="wafx-menu-item " role="menuitem" href="./3dsi1.html"  >3D Streaming Instability 1</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./95c24eda_e362_4553_9b56_01d023c5876d.html"  >3D Streaming Instability 2</a>
+<a class="wafx-menu-item " role="menuitem" href="./3dsi2.html"  >3D Streaming Instability 2</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./789195bb_a6c6_456c_9f98_64c86ebf0329.html"  >Magnetorotational Instability Turbulence</a>
+<a class="wafx-menu-item " role="menuitem" href="./mriturb.html"  >Magnetorotational Instability Turbulence</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./06a20866_add6_408c_91d3_41eaf6db730c.html"  >2D Kelvin-Helmholtz Instability</a>
+<a class="wafx-menu-item " role="menuitem" href="./2dkhi.html"  >2D Kelvin-Helmholtz Instability</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./d04b5cfa_0301_4db3_80ee_cf541859ee38.html"  >2D Rayleigh-Taylor Instability</a>
+<a class="wafx-menu-item " role="menuitem" href="./2drti.html"  >2D Rayleigh-Taylor Instability</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./2abe6115_26e3_4a73_a688_09ab4ea3ab71.html"  >3D Rayleigh Taylor Instability</a>
+<a class="wafx-menu-item " role="menuitem" href="./3drti.html"  >3D Rayleigh Taylor Instability</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./83c3dcf5_873b_49da_b1a1_3d951a9fee1d.html"  >Self-Gravitating Disk</a>
+<a class="wafx-menu-item " role="menuitem" href="./sgdisk.html"  >Self-Gravitating Disk</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./66f635d1_84f3_45ba_a3ba_b1876e331122.html"  >Bow Shock</a>
+<a class="wafx-menu-item " role="menuitem" href="./bowshock.html"  >Bow Shock</a>
 </li>
 </ul>
 </li>
@@ -183,13 +183,38 @@ document.wafxScreenInfos =
 <div class="compVis_8"><div  class='comp_8 wafxText '><div class='textShape_1024' style='height:5px;'></div><h3 class="waStyle-46c785bb-4092-4d97-a4ff-af25c24c5eee"><span class="t4"   >Jake Simon</span></h3>
 <h3 class="waStyle-b6cd58d0-1379-4fdb-98e4-f8b73e927107"><span class="t5"   > Assistant Professor</span></h3>
 <h3 class="waStyle-b6cd58d0-1379-4fdb-98e4-f8b73e927107"><span class="t6"   > Iowa State University</span></h3></div></div>
-<div class="compVis_9"><div  class='comp_9 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t7"  >Bow Shock</span>&nbsp;</p>
-<p><span class="t8"  ></span>&nbsp;</p>
-<p style="text-align:justify"><span class="t9"  >Evolution of a dense cloud moving supersonically through a low density region (in a frame moving at the original speed of the cloud). A bow shock results, along with the deformation of the dense cloud. This calculation is used as a test problem for Athena. The movie shows gas density.</span>&nbsp;</p></div></div>
-<div class="compVis_10"><div  class='comp_10'><video style="width:100%;height:100%" controls="controls">
-<source src="./wafx_res/Files/Bow Shock - Density, 2D.mp4" type=video/mp4>
-</video>
-</div></div>
+<div class="compVis_9"><div  class='comp_9 wafxText '><div class='textShape_1024' style='height:5px;'></div><p style="text-align:justify"><span class="t7"  >I enjoy teaching courses in both astronomy and physics.  In my experience, the best way to learn something is to actually do it.  Thus, I am a very strong proponent of active learning at all levels, including in-class activities, discussions, and highly interactive lectures.  Furthermore, I enjoy using state-of-the-art technology in my teaching.</span>&nbsp;</p>
+<p>&nbsp;</p>
+<p><span class="t8"  >Here are the courses that I have taught and will teach, with links where appropriate. </span>&nbsp;</p></div></div>
+<div class="compVis_10"><div  class='comp_10 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t9"  >Computational Physics (Physics 551)</span>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p></div></div>
+<div class="compVis_11"><div  class='comp_11 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t10"  >Stars, Galaxies, &amp; Cosmology (Astronomy 150)</span>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p></div></div>
+<div class="compVis_12"><div class='comp_12'  title=""><img  class="wafx-img-picture" src="./wafx_res/Images/0-7-689289.gif" alt=""></div></div>
+<div class="compVis_13"><div  class='comp_13 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t11"  >Course theme: Introduce students to the power and potential pitfalls of computation in physics and to always be careful with "black box" codes</span>&nbsp;</p>
+<p>&nbsp;</p>
+<p><span class="t12"  >Next semester to teach this course: Spring 2020</span>&nbsp;</p>
+<p><span class="t13"  > </span>&nbsp;</p>
+<p><span class="t14"  >Class materials/references:  Lecture Notes on GitHub, Computational Physics: Problem Solving with Python (Landau et al.)</span>&nbsp;</p></div></div>
+<div class="compVis_14"><div class='comp_14'  title=""><img  class="wafx-img-picture" src="./wafx_res/Images/0-7-689289.gif" alt=""></div></div>
+<div class="compVis_15"><div class='comp_15'  title=""><img  class="wafx-img-picture" src="./wafx_res/Images/0-7-689289.gif" alt=""></div></div>
+<div class="compVis_16"><div class='comp_16'  title=""><img  class="wafx-img-picture" src="./wafx_res/Images/0-7-689289.gif" alt=""></div></div>
+<div class="compVis_17"><div class='comp_17'  title=""><img  class="wafx-img-picture" src="./wafx_res/Images/0-7-689289.gif" alt=""></div></div>
+<div class="compVis_18"><div  class='comp_18 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t15"  >Philosophy</span>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p></div></div>
+<div class="compVis_19"><div class='comp_19'  title=""><img  class="wafx-img-picture" src="./wafx_res/Images/0-340-planetesimals.jpg" alt=""></div></div>
+<div class="compVis_20"><div  class='comp_20 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t16"  >Course theme: A survey of astronomy for the non-scientist, with a focus on the universe beyond our solar system: stars, black holes, galaxies, cosmology, life in the universe. </span>&nbsp;</p>
+<p><span class="t17"  ></span>&nbsp;</p>
+<p><span class="t18"  >Next semester to teach this course: Fall 2020</span>&nbsp;</p>
+<p><span class="t19"  > </span>&nbsp;</p>
+<p><span class="t20"  >Class materials/references: under development</span>&nbsp;</p></div></div>
+<div class="compVis_21"><div class='comp_21'  title=""><img  class="wafx-img-picture" src="./wafx_res/Images/0-7-689289.gif" alt=""></div></div>
 
 
 
