--- a/3dsi1.html
+++ b/3dsi1.html
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="3dsi1.css?64af870c_670d_4c47_99f9_7c9878093334_7"/>
+	<link rel="stylesheet" href="3dsi1.css?6b0a6ac1_ff02_4406_bfe6_31d3dc390c4d_7"/>
 
 	<style>
 
@@ -185,7 +185,7 @@ document.wafxScreenInfos =
 <h3 class="waStyle-b6cd58d0-1379-4fdb-98e4-f8b73e927107"><span class="t6"   > Iowa State University</span></h3></div></div>
 <div class="compVis_9"><div  class='comp_9 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t7"  >3D Streaming Instability 1</span>&nbsp;</p>
 <p><span class="t8"  ></span>&nbsp;</p>
-<p style="text-align: justify;"><span class="t9"  >Evolution of the streaming instability in a 3D local disk patch (x direction is radial, y direction is azimuthal) The movie shows particle density. As the instability progresses, radial filaments form (which is absent in the <a href="./2dsi.html"  style="text-decoration: underline;">2D unstratified case</a>) , which eventually give birth to gravitationally bound planetesimals. </span>&nbsp;</p></div></div>
+<p><span class="t9"  >Evolution of the streaming instability in a 3D local disk patch (x direction is radial, y direction is azimuthal) The movie shows particle density. As the instability progresses, radial filaments form (which is absent in the <a href="./2dsi.html"  style="text-decoration: underline;">2D unstratified case</a>) , which eventually give birth to gravitationally bound planetesimals. </span>&nbsp;</p></div></div>
 <div class="compVis_10"><div  class='comp_10'><video style="width:100%;height:100%" controls="controls">
 <source src="./wafx_res/Files/Streaming Instability Simulations - Pi %3D 0.075.mp4" type=video/mp4>
 </video>
